--- a/Latex/lz77.tex
+++ b/Latex/lz77.tex
@@ -2,28 +2,27 @@
 In this section we provide a short overview of the dictionary-based compression algorithm presented by Abrham Lempel and Jacob Ziv in 1977 \cite{ziv1}. The aim of this algorithm is trying to reduce the redundancy due to similar sequence repeating along the message. What it does is basically checking if a certain piece of the sequence has already been found in the past and, if it is the case, we code the whole piece with a reference to the previous alike sequence.
 
 \subsection{The algorithm} \label{subsec:lz77alg}
-The algorithm works with two adjacent windows shifting on the right during the coding of the message. The first window is the \textit{search window} and has length $L_s$; the second one is the \textit{coding window} and has length $L_c$. We want to find a match between any prefix of the \textit{coding window} and a sequence contained in the overall window given by the juxtapposition of the \textit{search window}
- and the \textit{coding window}, i.e. it is sufficient that only the first symbol of the match belongs to the \textit{search window}, while the matched pattern can stretch in through the \textit{coding window} itself. The window lengths $L_s$ and $L_c$ are two parameters of the algorithm and their choice strongly influences the compression performances.
+The algorithm works with two adjacent windows shifting on the right during the coding of the message. The first window is the \textit{searching window} and has length $L_s$; the second one is the \textit{coding window} and has length $L_c$. We want to find a match between any prefix of the \textit{coding window} and a sequence contained in the overall window given by the juxtapposition of the \textit{searching window} and the \textit{coding window}, i.e. it is sufficient that only the first symbol of the match belongs to the \textit{searching window}, while the matched pattern can stretch in through the \textit{coding window} itself. The window lengths $L_s$ and $L_c$ are two parameters of the algorithm and their choice strongly influences the compression performances, we will see how in the last part of this report.
  
 Once we have found a match between a prefix of the \textit{coding window} and another piece of message, we code it as a triplet (\textit{offset}, \textit{length}, \textit{symbol}) where:
 \begin{itemize}
 \item
-\textbf{offset} denotes the number of back hops we have to do, starting from the first symbol of the \textit{coding sequence}, to find the beginning of the matched string; it is clear that, for how it is defined, the \textit{offset} cannot exceeds the \textit{search window} dimension;
+\textbf{offset} denotes the number of back hops we have to do, starting from the first symbol of the \textit{coding sequence}, to find the beginning of the matched string; it is clear that, for how it is defined, the \textit{offset} cannot exceeds the \textit{searching window} dimension;
 
 \item
-\textbf{length} is the length of the matched string or, equivalently, of the prefix of the \textit{coding window} which has been matched. This value cannot exceed $L_s + L_c - 1$ and it is exactly $L_s + L_c - 1$ when the matched string starts from the first symbol of the \textit{search window} and ends in the penultimate symbol of the \textit{coding window};
+\textbf{length} is the length of the matched string or, equivalently, of the prefix of the \textit{coding window} which has been matched. This value cannot exceed $L_c$, since this is the maximum dimension of the pattern we are looking for;
 
 \item
-\textbf{symbol} is the first symbol after the matched prefix of the \textit{coding window}. We encode assure the functioning of the algorithm also in case of no matches. 
+\textbf{symbol} is the first symbol after the matched prefix of the \textit{coding window}. Its encoding assures the functioning of the algorithm also in case of no matches. 
 \end{itemize}
 
-After the generation and the storage of a triplet inside the dictionary, we shift the windows such that the first symbol of the \textit{coding window} corresponds to the first non encoded symbol, that is the oen encoded in the field \textit{symbol} of the last triplet.
+After the generation and the storage of a triplet inside the dictionary, we shift the windows such that the first symbol of the \textit{coding window} corresponds to the first non encoded symbol.
 
 \subsection{LZ77 Implementation} \label{subsec:lz77implem}
-In the following paragraphs we will present our own implementation in Matlab of the algorithm, spanning the different versions we produced. As a matter of fact, several editions of the same program have been written, adopting different approaches in some parts of the code. Actually the versions differ above all for the pattern matching that has been adopted, while the rest of the code reamins basically the same.
+In the following paragraphs we will present our own implementation in Matlab of the algorithm, spanning the different versions we produced. As a matter of fact, several editions of the same program have been written, adopting different approaches in some parts of the code. Actually the versions differ above all for the pattern matching that has been adopted, while the rest of the code remains basically the same.
 
 \subsubsection{Basic Coding Algorithm} \label{subsubsec:basiclz77}
-First of all we choose a file and write it as a sequence of bytes (\texttt{uint8} in Matlab). We assume this is the original message, whose alphabet is made of all the possible combinations of $8$ bit and has size $M = 2^8 = 256$. The first symbol of the sequence is encoded as a single symbol directly, because placing the \textit{coding window} in the first positions makes no sense, since we would have no \textit{search window} to exploit. Then, the \textit{coding window} starts from the second position of the sequence and, until there are at least $L_s$ symbols before it, the \textit{search window} is shrunk to fit the available positions. The same thing happen to the \textit{coding window} when we are reaching the end of the file: if less than $L_c$ symbols are left, we use a shorter \textit{coding window}. Note that, in order to have always a last symbol to insert in the \textit{symbol} field of the triplet, near the end of the file the \textit{coding window} is shrunk such that the last symbol is left out and, in case of a full match of the window, we still have one more symbol to complete the triplet.
+First of all we choose a file and write it as a sequence of bytes (\texttt{uint8} in Matlab). We assume this is the original message, whose alphabet is made of all the possible combinations of $8$ bit and has size $M = 2^8 = 256$. The first symbol of the sequence is encoded as a single symbol directly, because placing the \textit{coding window} in the first positions makes no sense, since we would have no \textit{searching window} to exploit. Then, the \textit{coding window} starts from the second position of the sequence and, until there are at least $L_s$ symbols before it, the \textit{searching window} is shrunk to fit the available positions. The same thing happen to the \textit{coding window} when we are reaching the end of the file: if less than $L_c$ symbols are left, we use a shorter \textit{coding window}. Note that, in order to have always a symbol to insert in the \textit{symbol} field of the last triplet, near the end of the file the \textit{coding window} is shrunk such that the last symbol of the stream is left out.
 
 Once the dictionary has been created, we want to write it using the least amount of memory we can. Since the values of $L_s$ and $L_c$ are fixed and determine the maximum values for the fields \textit{offset} and \textit{length} and we know that a symbol is represented with a single byte, we can estimate a maximum number of bytes to use for each triplet as:
 \begin{align}
@@ -34,7 +33,7 @@ l_{length} &= \left \lceil \frac{\lceil log_2(L_s + L_c - 1) \rceil }{8} \right 
 We use exactly $l_{offset} + l_{length} + 1$ bytes for each triplet and encode separately its three components. Then we create the message to be sent by concatenating the bytes related to each entry of the dictionary, starting from the first one. Since we use a constant number of bytes for each entry and the receiver knows how many bytes are employed for each triplet component, it is easy to build the dictionary at the receiver side and perform the decoding to restore the original file.
 
 \subsubsection{Version 1: Basic}
-The first, basic, version of the program used to execute the pattern matching by brute force: we compare the first character of the \textit{coding window} with each element of the \textit{search window}. When a match occurs, we compare the second element of the \textit{coding window} with the following symbol of the \textit{search window} and so on until we find two different symbols. Then, if the length of the match is longer than the longest match found so far, we replace it and save also the starting point of the match in the \textit{search window}. If, in the end, the longest match has zero length, this means that no match has been found and we have to encode one only symbol. This basic algorithm is very wasteful, because we have to try every possible position.
+As previously mentioned, the several versions of the algorithms differs by their pattern matching technique to find The first, basic, version of the program executes the pattern matching by brute force: we compare the first character of the \textit{coding window} with each element of the \textit{search window}. When a match occurs, we compare the second element of the \textit{coding window} with the following symbol of the \textit{search window} and so on until we find two different symbols. Then, if the length of the match is longer than the longest match found so far, we replace it and save also the starting point of the match in the \textit{search window}. If, in the end, the longest match has zero length, this means that no match has been found and we have to encode one only symbol. This basic algorithm is very wasteful, because we have to try every possible position.
 
 \subsubsection{Version 2: KMP}
 A first improvement has been brought by using the KMP (Knuth-Morris-Pratt) pattern mathcing algorithm \cite{knuth1}. This algorithm is optimum for the research of a pattern inside a string: it takes a time $\mathcal{O}(n + k)$, where $n$ is the length of the pattern and $k$ is the length of the string. We though about using the KMP algorithm where the pattern $\mathbf{c}$ is the \textit{coding window} and the overall string $[\mathbf{s}, \mathbf{c}]$ is the \textit{search window} concatenated with the \textit{coding window}.
