--- a/Latex/final_report_src_coding.tex
+++ b/Latex/final_report_src_coding.tex
@@ -42,9 +42,11 @@
 
 \input{lzss.tex}
 
+\input{windows.tex}
+
 \input{comparison.tex}
 
-\input{results.tex}
+%\input{results.tex}
 
 \bibliographystyle{plain}
 \bibliography{src}
