--- a/Latex/lz77.tex
+++ b/Latex/lz77.tex
@@ -19,35 +19,31 @@ Once we have found a match between a prefix of the \textit{coding window} and an
 After the generation and the storage of a triplet inside the dictionary, we shift the windows such that the first symbol of the \textit{coding window} corresponds to the first non encoded symbol.
 
 \subsection{LZ77 Implementation} \label{subsec:lz77implem}
-In the following paragraphs we will present our own implementation in Matlab of the algorithm, spanning the different versions we produced. As a matter of fact, several editions of the same program have been written, adopting different approaches in some parts of the code. Actually the versions differ above all for the pattern matching that has been adopted, while the rest of the code remains basically the same.
+In the following paragraphs we will present our own implementation in Matlab of the algorithm, spanning the different versions we produced. As a matter of fact, several editions of the same program have been written, adopting different approaches in some parts of the code. Actually the versions differ above all for the pattern matching algorithm that has been adopted, while the rest of the code remains basically the same.
 
 \subsubsection{Basic Coding Algorithm} \label{subsubsec:basiclz77}
-First of all we choose a file and write it as a sequence of bytes (\texttt{uint8} in Matlab). We assume this is the original message, whose alphabet is made of all the possible combinations of $8$ bit and has size $M = 2^8 = 256$. The first symbol of the sequence is encoded as a single symbol directly, because placing the \textit{coding window} in the first positions makes no sense, since we would have no \textit{searching window} to exploit. Then, the \textit{coding window} starts from the second position of the sequence and, until there are at least $L_s$ symbols before it, the \textit{searching window} is shrunk to fit the available positions. The same thing happen to the \textit{coding window} when we are reaching the end of the file: if less than $L_c$ symbols are left, we use a shorter \textit{coding window}. Note that, in order to have always a symbol to insert in the \textit{symbol} field of the last triplet, near the end of the file the \textit{coding window} is shrunk such that the last symbol of the stream is left out.
+First of all we choose a file and write it as a sequence of bytes (\texttt{uint8} in Matlab). We assume this is the original message, whose alphabet is made of all the possible combinations of $8$ bits and has size $M = 2^8 = 256$. The first symbol of the sequence is encoded as a single symbol directly, because placing the \textit{coding window} in the first positions makes no sense, since we would have no \textit{searching window} to exploit. Then, the \textit{coding window} starts from the second position of the sequence and, until there are at least $L_s$ symbols before it, the \textit{searching window} is shrunk to fit into the available positions. The same thing happens to the \textit{coding window} when we are reaching the end of the file: if less than $L_c$ symbols are left, we use a shorter \textit{coding window}. Note that, in order to always have a symbol to insert in the \textit{symbol} field of the last triplet, near the end of the file the \textit{coding window} is shrunk such that the last symbol of the stream is left out.
 
-Once the dictionary has been created, we want to write it using the least amount of memory we can. Since the values of $L_s$ and $L_c$ are fixed and determine the maximum values for the fields \textit{offset} and \textit{length} and we know that a symbol is represented with a single byte, we can estimate a maximum number of bytes to use for each triplet as:
+Once the dictionary has been created, we want to write it using the least amount of memory we can. Since the values of $L_s$ and $L_c$ are fixed and determine the maximum values for the fields \textit{offset} and \textit{length} and we know that a symbol is represented with a single byte, we can evaluate the maximum number of bits to use for each triplet as:
 \begin{align}
-l_{offset} &= \left \lceil \frac{\lceil log_2L_s \rceil}{8} \right \rceil \text{bytes} \\
-l_{length} &= \left \lceil \frac{\lceil log_2(L_s + L_c - 1) \rceil }{8} \right \rceil \text{bytes} 
+l_{offset} &= \left \lceil log_2L_s \right \rceil \text{bits} \\
+l_{length} &= \left \lceil log_2L_c \right \rceil \text{bits} 
 \end{align}
 
-We use exactly $l_{offset} + l_{length} + 1$ bytes for each triplet and encode separately its three components. Then we create the message to be sent by concatenating the bytes related to each entry of the dictionary, starting from the first one. Since we use a constant number of bytes for each entry and the receiver knows how many bytes are employed for each triplet component, it is easy to build the dictionary at the receiver side and perform the decoding to restore the original file.
+We use exactly $l_{offset} + l_{length} + 8$ bits for each triplet. Once we have created a sequence of bits by lining up all the rows of the dictionary, we can split it in blocks of $8$ bits and code it as a sequence of bytes. To let the receiver know how many bits represent each element of the triplet, we attach in front of the stream three bytes: the first indicating the number of bits related to the \textit{offset}, the second related to the \textit{lenght} and the third to the \textit{symbol}. One may argue that, with a single byte, we can referring only to values smaller than $2^8 = 256$; this is true, but, for our purposes, a byte is more than sufficient: suppose we need $200$ bits to represent the \textit{offset} in a triplet; this means that our \textit{searching window} is almost $2^{200}$ bits long, that is around $2 \times 10^{50}$ Gigabytes, of course absolutely useless for ordinary files. At the receiver side the user inspects the first three bytes to retrieve the number of bits dedicated to each component of the triplet. Then, after looking at the message as a stream of bits, it can group together the triplets of the dictionary by exploiting the information just got. This explains also why we cannot use less than $3$ bytes to express the dimension of one triplet: since the \textit{byte} is the fundamental unity of memory in every computer, we are sure that every user is able to get the initial information and thus decoding the dictionary. 
 
 \subsubsection{Version 1: Basic}
-As previously mentioned, the several versions of the algorithms differs by their pattern matching technique to find The first, basic, version of the program executes the pattern matching by brute force: we compare the first character of the \textit{coding window} with each element of the \textit{search window}. When a match occurs, we compare the second element of the \textit{coding window} with the following symbol of the \textit{search window} and so on until we find two different symbols. Then, if the length of the match is longer than the longest match found so far, we replace it and save also the starting point of the match in the \textit{search window}. If, in the end, the longest match has zero length, this means that no match has been found and we have to encode one only symbol. This basic algorithm is very wasteful, because we have to try every possible position.
+As previously mentioned, the several versions of the algorithms differ by the pattern matching technique to find the \textit{coding window} inside the \textit{searching window}. The first, basic, version of the program executes the pattern matching by brute force: we compare the first character of the \textit{coding window} with each element of the \textit{search window}. When a match occurs, we compare the second element of the \textit{coding window} with the following symbol of the \textit{search window} and so on until we find two different symbols. Then, if the length of the match is larger than the longest match found so far, we replace it and save also the starting point of the match in the \textit{search window}. If, in the end, the longest match has zero length, this means that no match has been found and we have to encode one only symbol. This basic algorithm is very wasteful, because we have to try every possible position.
 
 \subsubsection{Version 2: KMP}
 A first improvement has been brought by using the KMP (Knuth-Morris-Pratt) pattern mathcing algorithm \cite{knuth1}. This algorithm is optimum for the research of a pattern inside a string: it takes a time $\mathcal{O}(n + k)$, where $n$ is the length of the pattern and $k$ is the length of the string. We though about using the KMP algorithm where the pattern $\mathbf{c}$ is the \textit{coding window} and the overall string $[\mathbf{s}, \mathbf{c}]$ is the \textit{search window} concatenated with the \textit{coding window}.
 
-The KMP algorithm starts with the brute force approach, comparing the first character of the pattern with each character of the string, but it allows to improve performances in pattern matching because, thanks to previous failed matches, it realize when it is possible to jump ahead and discard some trials, which will surely fail. We used the "jump mechanism" of KMP to realize a second version of the program, but the time performances keep remaining very poor, due to the many nested cycle we have to use, which are not very fast to be executed in Matlab. Moreover, each different pattern needs a \textit{matching function} to be computed, which increases the number of necessary computations.
+The KMP algorithm starts with the brute force approach, comparing the first character of the pattern with each character of the string, but it allows to improve performances in pattern matching because, thanks to previous failed matches, it realizes when it is possible to jump ahead and discard some trials, which will surely fail. We used the "jump mechanism" of KMP to realize a second version of the program, but the time performances keep remaining very poor, due to the many nested cycles we have to use, which are not very fast to be executed in Matlab. Moreover, each different pattern needs a \textit{matching function} to be computed, which increases the number of necessary computations.
 
 \subsubsection{Version 3: optimistic \texttt{strfind()}}
 The third version uses the Matlab function \texttt{strfind()} for pattern matching, which is optimized to work in Matlab. We simply invoke this method using the \textit{search window} as string and the \textit{coding window} as pattern to be found. If no matches occurs we discard the last symbol of the \textit{coding window} and repeat the procedure until either a match is found or we reduce the length of the pattern to zero, that means that we have to encode the symbol individually.
 
-The term \textit{optimistic} refers to the order we take different pattern: we are confident to find the longest match, and then the best one, quite soon and therefore we start by looking for the entire pattern. Of course, if there is little redundancy and there is often no match found, we have to repeat the cycle $L_c$ times for each different \textit{coding window}.
+The term \textit{optimistic} refers to the order in which we take different patterns: we are confident to find the longest match, the best one, quite soon and therefore we start by looking for the entire pattern. Of course, if there is little redundancy and there is often no match found, we have to repeat the cycle $L_c$ times for each different \textit{coding window}.
 
 \subsubsection{Version 4: pessimistic \texttt{strfind()}} \label{subsubsec:pess}
-From an empirical point of view we found that, often, we have not many long matches and hence the \textit{optimistic} approach is not very suitable. The \textit{pessimistic} approach consists in starting to look for a match with the shortest possible prefix of the \textit{coding window} and executing the pattern matching through \texttt{strfind()} until we find no more matches. In this case we consider the previous match, which is the longest one, to build the current triplet. If there are no matches we know it from the first iteration and this allows us to save a lot of time.
-
-This fourth version results to be the faster one; anyway, we must be aware that performances are stringly influenced by what kind of file we are trying to compress. Our experiments involved most of all text files or human-written files, which do not present a large redundancy. On one hand this makes the \textit{pessimistic} approach the best one in terms of time performances; on the other hand, the LZ77 algorithm is not the best choice for compression for files with low autocorrelation.
-
-All the results presented in the following has been obtained with this version of the program.
+From an empirical point of view we found that we often have not many long matches and hence the \textit{optimistic} approach is not very suitable. The \textit{pessimistic} approach consists in starting to look for a match with the shortest possible prefix of the \textit{coding window} and executing the pattern matching through \texttt{strfind()} until we find no more matches. In this case we consider the previous match, which is the longest one, to build the current triplet. If there are no matches we know it from the first iteration and this allows us to save a lot of time. Quite all the results presented in the following have been obtained with this version of the program.
